@@ -1,5 +1,7 @@
 2001-01-15  Stefanus Du Toit  <sjdutoit@uwaterloo.ca>
 
+	* src/Codec.h, src/Factory.h, Codecs/*.cc: removed Metrics
+
 	* .cvsignore, tests/.cvsignore, tests/Objects/.cvsignore,
 	tutorial/.cvsignore: Added various files to be ignored.
 
